# swp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: Authentication.md  Endpoints.md
include/: base64.hpp  binary.hpp  hex.hpp  http_server_async_ssl.hpp  request_handler.hpp  server_certificate.hpp  server_db.hpp  session_id.hpp  urlparser.hpp
include/swp/: http_server_async_ssl.hpp  rest_api.hpp  server_db.hpp
include/swp/rest_api/: tools.hpp  v1.hpp
src/: db_utils.hpp  http_server_async_ssl.cpp  http_server_async_ssl.hpp  main.cpp  server.db  server_certificate.hpp  server_db.cpp
src/swp/: http_server_async_ssl.cpp  rest_api.cpp  server_db.cpp
test/: main.cpp
